--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+      <canvas id="unity-canvas" width=700 height=400 tabindex="-1"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WebXR.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebXR.data.gz",
-        frameworkUrl: buildUrl + "/WebXR.framework.js.gz",
-        codeUrl: buildUrl + "/WebXR.wasm.gz",
+        dataUrl: buildUrl + "/WebXR.data",
+        frameworkUrl: buildUrl + "/WebXR.framework.js",
+        codeUrl: buildUrl + "/WebXR.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "GeoblastWebXR",
@@ -94,8 +94,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "700px";
+        canvas.style.height = "400px";
       }
 
       loadingBar.style.display = "block";
